discussion/kv_engine/156421/156421_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

BP: MB-42916: Add the response code to slow log

Extend the slow logging entry to contain the status code
in the response. For multi-response commands we would
always log the _last_ status code being reported.

Change-Id: Ia437ffbde07e8ec7ce0fa1a40ccc751a43cca6e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-24 15:32:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-24 15:53:03.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/57/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61: error: no member named "getLogDir" in "McdEnvironment" [clang-diagnostic-error]
             boost::filesystem::directory_iterator(mcd_env->getLogDir())) {
                                                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/57/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: no member named "getLogDir" in "McdEnvironment" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/57/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/66/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: no member named "getLogDir" in "McdEnvironment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/66/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/110/ : FAILURE

Compile error at ..\kv_engine\tests\testapp\testapp_tune_mcbp_sla.cc(131): error C2039: "getLogDir": is not a member of "McdEnvironment" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/110/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/69/ : FAILURE

Compile error at [2021-06-24T15:35:58.211Z] ../kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: no member named "getLogDir" in "McdEnvironment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/69/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/69/ : FAILURE

Compile error at [2021-06-24T15:37:05.288Z] ../kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: no member named "getLogDir" in "McdEnvironment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/69/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/69/ : FAILURE

Compile error at [2021-06-24T15:44:13.014Z] ../kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: ?class McdEnvironment? has no member named ?getLogDir?; did you mean ?getAuditLogDir??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/69/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/69/ : FAILURE

Compile error at [2021-06-24T15:40:50.685Z] ../kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: ?class McdEnvironment? has no member named ?getLogDir?; did you mean ?getAuditLogDir??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/69/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/72/ : FAILURE

Compile error at [2021-06-24T15:48:47.911Z] ../kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:132:61:
error: no member named "getLogDir" in "McdEnvironment"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/72/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8832/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
